# rspm

./: Cargo.toml  README.md  rspm-dmenu
cli/: Cargo.toml
cli/src/: main.rs
manager/: Cargo.toml
manager/src/: add.rs  configure.rs  file.rs  get.rs  lib.rs  list.rs  login.rs
