[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Encryption and hashing
chacha20poly1305 = { version = "0.9.0" }
rust-argon2 = "0.8"

# Random utils
rand = "0.8.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Prompting
requestty = "0.3.0"
